Trying to fix overlap

--- a/css/copy.scss
+++ b/css/copy.scss
@@ -570,6 +570,7 @@ img {
     
     #section {
         display: block;
+        position: relative;
         width: 100%;
         height: 250vh;
     }
